--- a/pages/forms/basic-form-elements.html
+++ b/pages/forms/basic-form-elements.html
@@ -1668,5 +1668,8 @@
 
     <!-- Demo Js -->
     <script src="../../js/demo.js"></script>
+
+    <!-- Demo Js -->
+    <script src="../../js/pages/main.js"></script>
 </body>
 </html>
