redirect to page

--- a/pages/examples/sign-in.html
+++ b/pages/examples/sign-in.html
@@ -87,7 +87,11 @@
 
     <!-- Custom Js -->
     <script src="../../js/admin.js"></script>
+
     <script src="../../js/pages/examples/sign-in.js"></script>
+
+    <!-- Main Js -->
+    <script src="../../js/pages/main.js"></script>
 </body>
 
 </html>
