--- a/pages/forms/basic-form-elements.html
+++ b/pages/forms/basic-form-elements.html
@@ -1669,7 +1669,7 @@
     <!-- Demo Js -->
     <script src="../../js/demo.js"></script>
 
-    <!-- Demo Js -->
+    <!-- Main Js -->
     <script src="../../js/pages/main.js"></script>
 </body>
 </html>
