--- a/index.html
+++ b/index.html
@@ -1067,7 +1067,7 @@ $(document).ready(function(){
 	</div>	
 	<div class="copy-right"> 
 		<div class="container">
-			<p>© 2017 Match. All rights reserved | Design by <a href="http://w3layouts.com"> W3layouts.</a></p>
+			<p>© 2020 Match. All rights reserved | Design by <a href="#">Madhur Rishtey</a></p>
 		</div>
 	</div> 
 </footer>
