--- a/index.html
+++ b/index.html
@@ -78,28 +78,9 @@ $(document).ready(function(){
 								<li><a href="matches.html">All Profiles</a></li>
 								<li class="has-children">
 									<a href="#">Mother Tongue</a> 
-									<ul class="cd-secondary-dropdown is-hidden">
+									<ul class="cd-secondary-dropdown is-hidden" id="motherTongueLists">
 										<li class="go-back"><a href="#">Menu</a></li>
-												<li><a href="l_list.html">Language 1</a></li>
-												<li><a href="l_list.html">Language 2</a> </li>
-												<li><a href="l_list.html">Language 3</a></li>
-												<li><a href="l_list.html">Language 4</a></li>
-												<li><a href="l_list.html">Language 5</a></li> 
-												<li><a href="l_list.html">Language 6</a></li> 
-												<li><a href="l_list.html">Language 7</a></li> 
-												<li><a href="l_list.html">Language 8</a></li> 
-												<li><a href="l_list.html">Language 9</a></li> 
-												<li><a href="l_list.html">Language 10</a></li> 
-												<li><a href="l_list.html">Language 11</a></li> 
-												<li><a href="l_list.html">Language 12</a></li> 
-												<li><a href="l_list.html">Language 13</a></li> 
-												<li><a href="l_list.html">Language 14</a></li> 
-												<li><a href="l_list.html">Language 15</a></li> 
-												<li><a href="l_list.html">Language 16</a></li> 
-												<li><a href="l_list.html">Language 17</a></li> 
-												<li><a href="l_list.html">Language 18</a></li> 
-												<li><a href="l_list.html">Language 19</a></li> 
-												<li><a href="l_list.html">Language 20</a></li> 
+						
 											
 									</ul> <!-- .cd-secondary-dropdown --> 
 								</li> <!-- .has-children -->
@@ -118,7 +99,7 @@ $(document).ready(function(){
 												<li><a href="c_list.html">Caste 9</a></li> 
 												<li><a href="c_list.html">Caste 10</a></li> 
 												<li><a href="c_list.html">Caste 11</a></li> 
-												<li><a href="c_list.html">Caste 12</a></li> 
+												<li><a href="c_list.html">Caste 12</a></li>
 												<li><a href="c_list.html">Caste 13</a></li> 
 												<li><a href="c_list.html">Caste 14</a></li> 
 												<li><a href="c_list.html">Caste 15</a></li> 
@@ -1077,7 +1058,9 @@ $(document).ready(function(){
 	<script src="js/main_landing.js"></script> <!-- Resource jQuery -->
 	<!-- //menu js aim -->
 		 <!-- Main Js -->
-		 <script src="../../js/pages/main.js"></script>
+		 <script src="js/pages/main.js"></script>
+		 <script src="js/pages/index.js"></script>
+
 	<!-- for bootstrap working -->
 		<script src="js/bootstrap.js"></script>
 <!-- //for bootstrap working -->
